[package]
name = "Rust_Socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketoxide = "0.8"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"